commited with google sync

--- a/app/src/main/res/drawable/fcaebook.xml
+++ b/app/src/main/res/drawable/fcaebook.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#00A9CA"/>
+    <solid android:color="#00008B"/>
     <corners android:radius="20dp"/>
 </shape>
