--- a/app/src/main/res/layout/nightlife_main.xml
+++ b/app/src/main/res/layout/nightlife_main.xml
@@ -65,6 +65,7 @@
         android:text="When it comes to the nightlife..."
         android:textColor="@color/black"
         android:textSize="23sp"
+        android:fontFamily="@font/cantora_one"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
         android:gravity="center"/>
