--- a/app/src/main/res/layout/activity_quiz_intro.xml
+++ b/app/src/main/res/layout/activity_quiz_intro.xml
@@ -12,9 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/child"
-        android:layout_marginLeft="14dp"
-        android:rotationY="33"
-        android:rotationX="1"
+        android:layout_marginStart="@dimen/dp_30"
         android:outlineSpotShadowColor="#FFA500"
 
         />
