--- a/app/src/main/res/layout/coding_main.xml
+++ b/app/src/main/res/layout/coding_main.xml
@@ -63,6 +63,7 @@
         android:text="Do you like to code?"
         android:textColor="@color/black"
         android:textSize="23sp"
+        android:fontFamily="@font/cantora_one"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
         android:gravity="center"/>
