--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,5 +3,6 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/cantora_one</item>
         <item>@font/fenix</item>
+        <item>@font/poppins_light</item>
     </array>
 </resources>
